--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ User system, product entry, sales, inventory and customer queries, finance manag
         </div>
          
              <footer id="Pie">Pagina creada por Alvarez Gabriel <br><br>
-                 <p id= "contacto"> contacto: </p>
+                 <p id= "contacto"> contact: </p>
                  <div class="box"> 
   <p id= "correoimagen"></p>
   <p id= "correo">Alva_gabriel@hotmail.com</p>
