--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>Alvarez Gabriel</title>
       <link rel="stylesheet" href="index.css">
         
   
